infrastructure/controllers/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      targetPort: 3000
